# matchday

./: Cargo.toml  README.md
src/: main.rs
src/data_provider/: mod.rs  models.rs  sport_radar.rs
src/output/: console.rs
src/statistics/: mod.rs  models.rs  top_assisted_players.rs  top_scored_players.rs
