[package]
edition = "2021"
name    = "matchday"
version = "0.1.0"

[dependencies]
anyhow      = "1.0.86"
async-trait = "0.1.82"
clap        = { version = "4.5.16", features = ["derive"] }
futures     = "0.3.30"
reqwest     = { version = "0.12.7", features = ["json"] }
serde       = { version = "1.0.209", features = ["derive"] }
tabled      = "0.16.0"
tokio       = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
